@startuml
hide methods
left to right direction
skinparam classAttributeIconSize 0



class Company{
-name
-designation
-category
-address
-headquarters
}

class Laboratory {
  -name
  -address
  -phoneNumber
  -tin
}

class ClinicalAnalysisLaboratory {
  -laboratoryId
}

class TestType{
-code
-description
-collectionMethod
}

class ChemicalLaboratory{

}

class Employee{
-name
-address
-phoneNumber
-email
-employeeId
-organizationRole
-socCode
}

Company "1"---- "1..*" Laboratory : owns >
ClinicalAnalysisLaboratory ----|> Laboratory
ClinicalAnalysisLaboratory "1..*"----"*" TestType : performs >
Employee "1"---"1..*"ClinicalAnalysisLaboratory : creates >
ChemicalLaboratory ----|> Laboratory



@enduml